--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <script src="js/index.js"></script>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
@@ -36,7 +35,7 @@
       </span>
     </header>
     <!-- NavBar -->
-    <nav>
+    <nav id="nav">
       <ul class="menu" onclick="menuBar()">
         <a href="javascript:void(0);" class="icon">
           <i class="fa fa-bars"></i>Menu
@@ -242,5 +241,6 @@
         </div>
       </div>
     </footer>
+    <script src="js/index.js"></script>
   </body>
 </html>
