--- a/productDetails.html
+++ b/productDetails.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <script src="js/index.js"></script>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
@@ -35,7 +34,7 @@
     </header>
 
     <!-- Navbar -->
-    <nav>
+    <nav id="nav">
       <ul class="menu" onclick="menuBar()">
         <a href="javascript:void(0);" class="icon">
           <i class="fa fa-bars"></i>Menu
@@ -156,5 +155,6 @@
         </div>
       </div>
     </footer>
+    <script src="js/index.js"></script>
   </body>
 </html>
